# libdfu

./: CMakeLists.txt  FindDFU.cmake  brew.sh.cmake  dfu.c  dfu.h  dfu_file.c  dfu_file.h  dfu_load.c  dfu_util.c  dfu_util.h  dfuse.c  libdfu.h  portable.h  quirks.c
cmake_modules/: FindUSB.cmake
debian/: changelog  control  copyright  libahp_gt.install  libdfu.install
